# nats-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pnpm-lock.yaml  typeshare.toml
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  nav.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  state.rs
apps/desktop/src/components/: Chart.tsx  ComingSoon.tsx  Icon.tsx  InfoTip.tsx  Logo.tsx  RequireConnection.tsx  Select.tsx  Sidebar.tsx  TopBar.tsx  UpdatesDialog.tsx  ui.tsx
apps/desktop/src/features/admin/: DlqView.tsx
apps/desktop/src/features/connections/: ConnectionsView.tsx
apps/desktop/src/features/health/: HealthView.tsx
apps/desktop/src/features/jetstream/: BackupView.tsx  ConsumerLabView.tsx  ConsumersView.tsx  KvView.tsx  MessageBrowserView.tsx  ObjectStoreView.tsx  StreamsView.tsx
apps/desktop/src/features/messaging/: LiveTailView.tsx  MessagingView.tsx  PublisherView.tsx  ReplayView.tsx  RequestReplyView.tsx  message.tsx
apps/desktop/src/features/monitoring/: AccountsView.tsx  LatencyView.tsx  MetricsView.tsx  TopologyView.tsx
apps/desktop/src/features/overview/: OverviewView.tsx
apps/desktop/src/features/services/: ServicesView.tsx
apps/desktop/src/lib/: activeConnection.tsx  liveEvents.ts  monitorUrl.ts  theme.tsx  uiStore.ts
crates/ns-connection/: Cargo.toml
crates/ns-connection/src/: error.rs  lib.rs  service.rs
crates/ns-core/: Cargo.toml
crates/ns-core/src/: clock.rs  config.rs  error.rs  event.rs  ids.rs  jetstream.rs  lib.rs  message.rs  ports.rs  redact.rs  runtime.rs
crates/ns-dashboard/: Cargo.toml
crates/ns-dashboard/src/: lib.rs
crates/ns-event/: Cargo.toml
crates/ns-event/src/: bus.rs  error.rs  lib.rs
crates/ns-inspector/: Cargo.toml
crates/ns-inspector/src/: decode.rs  error.rs  format.rs  lib.rs
crates/ns-ipc/: Cargo.toml
crates/ns-ipc/src/: bridge.rs  error.rs  lib.rs
crates/ns-jetstream/: Cargo.toml
crates/ns-jetstream/src/: error.rs  lib.rs  service.rs
crates/ns-monitor/: Cargo.toml
crates/ns-monitor/src/: error.rs  lib.rs  service.rs
crates/ns-nats/: Cargo.toml
crates/ns-nats/src/: client.rs  error.rs  jetstream.rs  lib.rs
crates/ns-plugin/: Cargo.toml
crates/ns-plugin/src/: lib.rs
crates/ns-pubsub/: Cargo.toml
crates/ns-pubsub/src/: error.rs  lib.rs  service.rs
crates/ns-security/: Cargo.toml
crates/ns-security/src/: creds.rs  error.rs  lib.rs  secret_store.rs  tls.rs
crates/ns-storage/: Cargo.toml
crates/ns-storage/src/: db.rs  error.rs  lib.rs  profile_repo.rs  settings_repo.rs
crates/ns-subject/: Cargo.toml
crates/ns-subject/src/: lib.rs
crates/ns-telemetry/: Cargo.toml
crates/ns-telemetry/src/: error.rs  layer.rs  lib.rs  store.rs
crates/ns-terminal/: Cargo.toml
crates/ns-terminal/src/: lib.rs
crates/ns-testkit/: Cargo.toml
crates/ns-testkit/src/: lib.rs
crates/ns-types/: Cargo.toml
crates/ns-types/src/: app.rs  connection.rs  error.rs  event.rs  jetstream.rs  kv.rs  lib.rs  message.rs  monitor.rs  objectstore.rs  settings.rs
deploy/nats/: README.md  docker-compose.yml  nats-server.conf
docs/architecture/: 00-conventions-and-workspace.md  README.md  dependency-graph.md  implementation-roadmap.md  sub-account-security.md  sub-connection-manager.md  sub-core-runtime.md  sub-dashboard.md  sub-frontend-shell.md  sub-jetstream.md  sub-logging-observability.md  sub-message-inspector.md  sub-monitoring.md  sub-pubsub.md  sub-storage.md  sub-subject-explorer.md  sub-tauri-shell.md  sub-terminal.md  xc-deployment-strategy.md  xc-performance-strategy.md  xc-plugin-architecture.md  xc-security-model.md  xc-testing-strategy.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
tools/: versions.toml
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
website/: index.html
