[workspace]
resolver = "2"
members = ["crates/*", "tools/xtask", "apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
authors = ["NATS Studio contributors"]

[workspace.dependencies]
# External (pinned once here; referenced by crates as implementations land)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
typeshare = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
async-trait = "0.1"
zeroize = { version = "1", features = ["alloc", "derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
rusqlite = { version = "0.32", features = ["bundled"] }
async-nats = "0.49"
nkeys = "0.4"
futures = "0.3"
keyring = "3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"

# Intra-workspace crates
ns-types = { path = "crates/ns-types" }
ns-core = { path = "crates/ns-core" }
ns-event = { path = "crates/ns-event" }
ns-nats = { path = "crates/ns-nats" }
ns-security = { path = "crates/ns-security" }
ns-storage = { path = "crates/ns-storage" }
ns-telemetry = { path = "crates/ns-telemetry" }
ns-inspector = { path = "crates/ns-inspector" }
ns-connection = { path = "crates/ns-connection" }
ns-pubsub = { path = "crates/ns-pubsub" }
ns-jetstream = { path = "crates/ns-jetstream" }
ns-monitor = { path = "crates/ns-monitor" }
ns-subject = { path = "crates/ns-subject" }
ns-terminal = { path = "crates/ns-terminal" }
ns-plugin = { path = "crates/ns-plugin" }
ns-dashboard = { path = "crates/ns-dashboard" }
ns-ipc = { path = "crates/ns-ipc" }
ns-testkit = { path = "crates/ns-testkit" }
