[package]
name = "ns-connection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Depends only on the ns-core ports + shared DTOs (dependency inversion): the
# binary injects the concrete adapters (ns-nats, ns-security, ns-storage, ns-event).
[dependencies]
ns-types = { workspace = true }
ns-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
time = { workspace = true }
