[package]
name = "ns-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
ns-types = { workspace = true }
ns-core = { workspace = true }
ns-event = { workspace = true }
tauri = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
thiserror = { workspace = true }
