[package]
name = "ns-jetstream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Consumes the ns-core NatsClientProvider + JetStreamManager ports (the bin
# injects ns-connection). No dependency on the async-nats adapter crate.
[dependencies]
ns-types = { workspace = true }
ns-core = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait = { workspace = true }
