[package]
name = "nats-studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "NATS Studio — the definitive desktop GUI for NATS."

[[bin]]
name = "nats-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ns-types = { workspace = true }
ns-core = { workspace = true }
ns-event = { workspace = true }
ns-storage = { workspace = true }
ns-security = { workspace = true }
ns-nats = { workspace = true }
ns-connection = { workspace = true }
ns-telemetry = { workspace = true }
ns-ipc = { workspace = true }
