[package]
name = "nats-studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "NATS Studio — the definitive desktop GUI for NATS."

[[bin]]
name = "nats-studio"
path = "src/main.rs"

[features]
# Serve the embedded frontend via Tauri's custom protocol (no dev server).
# REQUIRED for standalone / release builds — without it the webview loads
# `build.devUrl` and shows "can't reach this page". `tauri dev` deliberately
# leaves this off so it can use the Vite dev server instead.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ns-types = { workspace = true }
ns-core = { workspace = true }
ns-event = { workspace = true }
ns-storage = { workspace = true }
ns-security = { workspace = true }
ns-nats = { workspace = true }
ns-connection = { workspace = true }
ns-pubsub = { workspace = true }
ns-jetstream = { workspace = true }
ns-telemetry = { workspace = true }
ns-ipc = { workspace = true }
