[package]
name = "nats-studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "NATS Studio — the definitive desktop GUI for NATS."

[[bin]]
name = "nats-studio"
path = "src/main.rs"

[features]
# Serve the embedded frontend via Tauri's custom protocol (no dev server).
# REQUIRED for standalone / release builds — without it the webview loads
# `build.devUrl` and shows "can't reach this page". `tauri dev` deliberately
# leaves this off so it can use the Vite dev server instead.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true }
# generate_context!() expands to serde_json refs once plugin config is present.
serde_json = { workspace = true }
# reqwest 0.13 + rustls 0.23 need a process-wide crypto provider installed at
# startup (ADR-0004: ring). Without it the HTTP monitor client panics on boot.
rustls = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ns-types = { workspace = true }
ns-core = { workspace = true }
ns-event = { workspace = true }
ns-storage = { workspace = true }
ns-security = { workspace = true }
ns-nats = { workspace = true }
ns-connection = { workspace = true }
ns-pubsub = { workspace = true }
ns-jetstream = { workspace = true }
ns-monitor = { workspace = true }
ns-telemetry = { workspace = true }
ns-ipc = { workspace = true }
# Native file/save dialogs (Object Store streaming picks disk paths); auto-update.
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
